# GenieX

./: .bazelignore  .bazelrc  .gitignore  .gitmodules  BUILD.bazel  CLAUDE.md  MODULE.bazel  README.md  SECURITY.md
.claude/skills/coverage/: SKILL.md
.claude/skills/reshape-pr-commits/: SKILL.md
.github/actions/run-in-ubuntu24/: action.yml
.github/actions/setup-snapdragon-sdks/: action.yml
.github/actions/setup-vcvars/: action.yml
.github/certs/hexagon/: README.md  ggml-htp-v1.cer  ggml-htp-v1.pfx  ggml-htp-v1.pvk
.github/docker/: toolchain-android.Dockerfile  toolchain-linux.Dockerfile
.github/scripts/: release.js  release_s3_manifest.py  sdk-linux-android.sh  sdk-windows.ps1
.github/scripts/ci/: build-sdk.ps1  build-sdk.sh
.github/workflows/: _build-android-aar.yml  _build-android-apk.yml  _build-cli.yml  _build-docker.yml  _build-python-sdist.yml  _build-sdk.yml  _build-toolchain-docker.yml  _lint.yml  _package-release.yml  _publish-github-release.yml  _publish-maven.yml  _publish-pypi.yml  _publish-s3.yml  _publish-testpypi.yml  _publish-winget.yml  _qdc-pytest.yml  _sign-windows.yml  _test.yml  bench.yml  build-cli.yml  build-docker.yml  build-llama-cpp-windows.yml  build-python-sdist.yml  build-sdk.yml  build.yml  ci.yml  dco-check.yml  docs-check.yml  docs.yml  lint.yml  pr-check.yml  qcom-preflight-checks.yml  release.yml  reusable-build-sdk.yml  scorecard.yml  test.yml
bindings/android/: README.md  pom.xml
bindings/android/app/: build.gradle.kts
bindings/go/: BUILD.bazel  common.go  device.go  ml.go  model_manager.go
bindings/python/: .gitignore  BUILD.bazel  BUILD.md  MANIFEST.in  README.md  _sdk_fetch.py  pyproject.toml  setup.py
bindings/python/geniex/: __init__.py  auto.py  cli.py  model_manager.py  modeling.py  tokenizer.py
bindings/python/geniex/_ffi/: _api.py  _types.py
bindings/python/geniex/generation/: __init__.py  config.py  output.py  streamer.py
bindings/python/geniex/geniex_sdk/: __init__.py  _api.py  _lib.py  _types.py
bindings/python/tests/: conftest.py  test_auto_vlm.py  test_cli.py  test_llm_llama_cpp.py  test_llm_qairt.py  test_metadata.py
bindings/python/tests/unit/: test_error_messages.py
bindings/rust/: Cargo.toml  README.md  build.rs
bindings/rust/docs/: rust_windows_arm64.md
bindings/rust/src/: core.rs  error.rs  lib.rs  llm.rs  types.rs  vlm.rs
bindings/rust/tests/: tests.rs
cli/: BUILD.bazel  README_zh.md  buf.gen.yaml  go.mod  go.sum
cli/cmd/geniex/logic/: BUILD.bazel  cv.go
cli/internal/model_hub/aihub/: BUILD.bazel  aihub.go  schema.go  schema_test.go  selector.go  selector_test.go  unzip.go  unzip_test.go
cli/proto/: BUILD.bazel
cli/server/: BUILD.bazel  route.go  server.go
docs/: README.md  build.md  docs.json  release.md  run.md  style.css
examples/android/: README.md  build.gradle  gradle.properties  settings.gradle  settings.gradle.kts
examples/android-new/: build.gradle
examples/python/: windows(arm64).ipynb  windows.ipynb
examples/rust/: Cargo.toml  README.md
notes/: build.md  release.md  run.md
scripts/: README.md  build_android_aar.sh
sdk/: .gitignore  BUILD.bazel  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  runfiles.bzl  s3_sdk_download.bzl  strip_runfiles.bzl
sdk/benchmark/: CMakeLists.txt  README.md  benchmark.c
sdk/benchmark/qdc/: _qdc.py  run_qdc_jobs.py
sdk/cmake/: arm64-linux-gnu.cmake  llama_cpp.cmake  qairt.cmake
sdk/include/: BUILD.bazel  build_config.h  geniex.h  logging.h  ml.h  registry.h
sdk/model-manager/: Cargo.toml
sdk/model-manager/crates/core/: Cargo.toml
sdk/model-manager/crates/core/examples/: bench_pull.rs
sdk/model-manager/crates/core/src/: config.rs  error.rs  lib.rs  logging.rs  manifest.rs  manifest_builder.rs  paths.rs  pull.rs  query.rs  resume.rs  store.rs  transport.rs
sdk/model-manager/crates/core/src/download/: engine.rs  mod.rs
sdk/model-manager/crates/core/src/executor/: mod.rs
sdk/model-manager/crates/core/src/hub/: hf.rs  localfs.rs  mod.rs
sdk/model-manager/crates/core/src/hub/s3/: detect.rs  extract.rs  mod.rs  selector.rs
sdk/model-manager/crates/core/src/hub/s3/detect/: windows.rs
sdk/model-manager/crates/core/src/source/: dockerhub.rs  hf.rs  localfs.rs
sdk/model-manager/crates/core/src/source/ai_hub/: detect.rs  manifest.rs  mod.rs  selector.rs
sdk/model-manager/crates/core/src/transport/: reqwest_impl.rs
sdk/model-manager/crates/core/tests/: ai_hub_live.rs  ai_hub_pull.rs  engine.rs  proxy_smoke.rs  pull_resume.rs  s3_live.rs  s3_pull.rs
sdk/model-manager/crates/ffi/src/: init.rs  logging.rs  pull.rs  store.rs  types.rs
sdk/model-manager/include/: geniex_model.h
sdk/model-manager/tests/: test_model_manager.c
sdk/patches/: llama-hexagon-release-sessions.patch
sdk/plugins/: CMakeLists.txt
sdk/plugins/llama_cpp/: BUILD.bazel  llama.cpp.bazel
sdk/plugins/llama_cpp/include/: htp_session.h  llm.h  params.h  profiler.h  threadpool.h  vlm.h
sdk/plugins/llama_cpp/src/: CMakeLists.txt  embedding.cpp  htp_session.cpp  llm.cpp  params.cpp  plugin.cpp  profiler.cpp  rerank.cpp  threadpool.cpp  vlm.cpp
sdk/plugins/qairt/: BUILD.bazel  CMakeLists.txt  build_geniex_qairt.bat  geniex-qairt.bazel
sdk/plugins/qairt/include/: common.h  llm.h  llm_model_registry.h  model_registry.h  qnn_runtime_utils.h  sampler_config_utils.h  vlm.h  vlm_model_registry.h
sdk/plugins/qairt/src/: CMakeLists.txt  asr.cpp  diarize.cpp  llm.cpp  plugin.cpp  rerank.cpp  vlm.cpp
sdk/plugins/qnn/: BUILD.bazel
sdk/src/: BUILD.bazel  CMakeLists.txt  ml.cpp  registry.cpp  version.cpp
sdk/tests/: BUILD.bazel  README.md
sdk/tests/benchmark/: README.md  benchmark.c
sdk/tests/benchmark/qdc/: run_qdc_jobs.py
sdk/tests/include/: util.h
sdk/tests/src/: BUILD.bazel  CMakeLists.txt  asr.cpp  cv.cpp  diarize.cpp  embedding.cpp  llm.cpp  rerank.cpp  vlm.cpp
tests/: README.md  _quality_data.py  conftest.py  pytest.ini
tests/benchmark/: _matrix.py
tests/qdc/: run_qdc_pytest.py
tools/runtime_benchmark/: README.md  RUN_ON_QDC.md  SCORE_WITH_CLAUDE.md  runtime_quality_benchmark.py
(+234 files in other folders)
