load("@bazel_skylib//rules:common_settings.bzl", "string_flag")
load("@rules_cc//cc:defs.bzl", "cc_import", "cc_library")

package(default_visibility = ["//visibility:public"])

# flags

string_flag(
    name = "sdk_type",
    build_setting_default = "s3",
    values = ["s3", "local", "bazel"],
)

config_setting(name = "s3_sdk", flag_values = { ":sdk_type": "s3" })
config_setting(name = "local_sdk", flag_values = { ":sdk_type": "local" })

# local

cc_library(
    name = "local_sdk_lib",
    hdrs = ["build/ml.h"],
    includes = ["build"],
    srcs = select({
        "@platforms//os:windows": ["build/nexa_bridge.dll"],
        "@platforms//os:linux": ["build/libnexa_bridge.so"],
    }),
    data = glob(["build/**/*"]),
)

alias(
    name = "sdk",
    actual = select({
        ":local_sdk": ":local_sdk_lib",
        ":s3_sdk": "@s3_sdk//:sdk",
        "//conditions:default": "@s3_sdk//:sdk",
    }),
)
