load("@bazel_skylib//rules:common_settings.bzl", "string_flag")
load("@rules_cc//cc:defs.bzl", "cc_import", "cc_library")
load(":runfiles.bzl", "sdk_local_bundle")

package(default_visibility = ["//visibility:public"])

# flags

string_flag(
    name = "sdk_type",
    build_setting_default = "s3",
    values = ["s3", "local", "bazel"],
)

config_setting(name = "s3_sdk", flag_values = { ":sdk_type": "s3" })
config_setting(name = "local_sdk", flag_values = { ":sdk_type": "local" })

# local

cc_library(
    name = "local_sdk_lib",
    hdrs = ["pkg-geniex/include/ml.h"],
    includes = ["pkg-geniex/include"],
    srcs = select({
        "@platforms//os:windows": ["pkg-geniex/lib/geniex.dll"],
        "@platforms//os:linux": ["pkg-geniex/lib/libgeniex.so"],
    }),
)

sdk_local_bundle(
    name = "local_sdk_runtime",
    sdk_lib = ":local_sdk_lib",
    data = select({
        "@platforms//os:windows": glob(["pkg-geniex/lib/**/*"]),
        "@platforms//os:linux": glob(["pkg-geniex/lib/**/*"]),
    }),
    strip_prefix = "sdk/pkg-geniex/lib",
)

alias(
    name = "sdk",
    actual = select({
        ":local_sdk": ":local_sdk_runtime",
        # ":s3_sdk": "@s3_sdk//:sdk",
        "//conditions:default": ":local_sdk_runtime",
    }),
)
