load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@rules_cc//cc:defs.bzl", "cc_import")

alias(
    name = "go",
    actual = ":geniex_sdk_go",
)

go_library(
    name = "geniex_sdk_go",
    srcs = [
        "asr.go",
        "common.go",
        "cv.go",
        "diarize.go",
        "embedder.go",
        "image_gen.go",
        "llm.go",
        "ml.go",
        "reranker.go",
        "tts.go",
        "vlm.go",
    ],
    cdeps = [":nexa_bridge"],
    cgo = True,
    importpath = "github.com/qcom-it-nexa-ai/geniex/bindings/go",
    visibility = ["//visibility:public"],
)

cc_import(
    name = "nexa_bridge",
    hdrs = ["build/ml.h"],
    includes = ["build"],
    shared_library = "build/libnexa_bridge.so",
    visibility = ["//visibility:public"],
)

filegroup(
    name = "nexa_bridge_runtime",
    srcs = glob(["build/**/*.so"]),
    visibility = ["//visibility:public"],
)

# cc_library(
#     name = "native_prebuilts",
#     deps = [
#         ":nexa_bridge",
#     ],
#     hdrs = ["build/ml.h"],
#     includes = ["build"],
#     visibility = ["//visibility:public"],
# )
#
# filegroup(
#     name = "native_runfiles",
#     srcs = [":prebuilt_shared_libs"],
#     visibility = ["//visibility:public"],
# )
#
