load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "headers",
    hdrs = glob(["include/**/*.h"]),
    includes = ["include"],
    deps = ["//sdk/include:headers"],
)

test_suite(
    name = "all_tests",
    tests = ["//sdk/tests/src:all_tests"],
)

test_suite(
    name = "smoke_test",
    tests = ["//sdk/tests/src:geniex_test_version"],
)
