load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

COMMON_COPTS = select({
    "//sdk:windows": ["/std:c++17", "/utf-8"],
    "//conditions:default": ["-std=c++17"],
})

cc_library(
    name = "headers",
    hdrs = glob(["include/*.h"]),
    includes = ["include"],
    deps = ["//sdk/include:headers"],
)

filegroup(
    name = "srcs",
    srcs = glob(["src/*.cpp"]),
)

filegroup(
    name = "runtime_libs",
    srcs = glob(["libs/**"]),
)

filegroup(
    name = "third_party_sources",
    srcs = ["@geniex_qairt_src//:sources"],
)

cc_library(
    name = "qairt_plugin",
    srcs = [":srcs"],
    copts = COMMON_COPTS + [
        "-DGENIEX_PLUGIN_ID_QAIRT=\"qairt\"",
    ],
    data = [":third_party_sources"],
    defines = [
        "ML_SHARED",
    ],
    tags = ["manual"],
    deps = [
        ":headers",
        "//sdk/include:headers",
    ],
)
