load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

package(default_visibility = ["//visibility:public"])

exports_files(["build_geniex_qairt.bat"])

COMMON_COPTS = select({
    "//sdk:windows": ["/std:c++17", "/utf-8"],
    "//conditions:default": ["-std=c++17"],
})

CPP20_COPTS = select({
    "//sdk:windows": ["/std:c++20", "/utf-8"],
    "//conditions:default": ["-std=c++20"],
})

COMMON_DEFINES = select({
    "//sdk:windows": [
        "_CRT_SECURE_NO_WARNINGS",
        "_WIN32_WINNT=0x0A00",
        "WIN32_LEAN_AND_MEAN",
        "NOMINMAX",
    ],
    "//conditions:default": [],
}) + [
    "GENIEX_DL",
]

cc_library(
    name = "headers",
    hdrs = glob(["include/*.h"]),
    includes = ["include"],
    deps = [
        "//sdk/include:headers",
        "@geniex_qairt_src//:headers",
    ],
)

cc_library(
    name = "llm_impl",
    srcs = ["src/llm.cpp"],
    copts = CPP20_COPTS,
    defines = COMMON_DEFINES,
    local_defines = [
        "ML_SHARED",
    ],
    deps = [
        ":headers",
        "//sdk/src:geniex_lib",
        "@geniex_qairt_src//:geniex_core",
    ],
)

cc_library(
    name = "plugin_lib",
    srcs = glob(["src/*.cpp"], exclude = ["src/llm.cpp"]),
    copts = COMMON_COPTS,
    defines = COMMON_DEFINES,
    local_defines = [
        "ML_SHARED",
    ],
    linkopts = select({
        "//sdk:windows": [
            "Advapi32.lib",
            "Shlwapi.lib",
            "ws2_32.lib",
        ],
        "//conditions:default": ["-ldl"],
    }),
    deps = [
        ":headers",
        ":llm_impl",
        "//sdk/src:geniex_lib",
        "@geniex_qairt_src//:geniex_core",
    ],
)

cc_binary(
    name = "geniex_plugin",
    srcs = glob(["src/*.cpp"], exclude = ["src/llm.cpp"]),
    copts = COMMON_COPTS,
    defines = COMMON_DEFINES,
    local_defines = [
        "ML_SHARED",
    ],
    data = [
        "@geniex_qairt_src//:runtime_dlls",
    ],
    linkopts = select({
        "//sdk:windows": [
            "Advapi32.lib",
            "Shlwapi.lib",
            "ws2_32.lib",
        ],
        "//conditions:default": ["-ldl"],
    }),
    deps = [
        ":headers",
        ":llm_impl",
        "//sdk/src:geniex_lib",
        "@geniex_qairt_src//:geniex_core",
    ],
    linkshared = True,
    linkstatic = False,
)

alias(
    name = "geniex_qairt",
    actual = ":geniex_plugin",
)
