load("@rules_cc//cc:defs.bzl", "cc_import", "cc_library")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "cmake_srcs",
    srcs = glob([
        "**",
    ], exclude = [
        ".git/**",
        "build/**",
        "cmake-out/**",
        "cmake-out-bazel-debug*/**",
    ], allow_empty = True),
)

genrule(
    name = "cmake_build",
    srcs = [
        "CMakeLists.txt",
        ":cmake_srcs",
        "@//sdk/plugins/qairt:build_geniex_qairt.bat",
        "@//sdk/cmake:arm64-windows-llvm.cmake",
    ],
    outs = [
        "geniex_core.dll",
        "geniex_core.lib",
    ],
    cmd_bash = "echo 'geniex-qairt cmake_build is only wired for Windows currently' >&2; exit 1",
    cmd_bat = "$(location @//sdk/plugins/qairt:build_geniex_qairt.bat) $(location CMakeLists.txt) $(location @//sdk/cmake:arm64-windows-llvm.cmake) $(@D)",
)

cc_library(
    name = "headers",
    hdrs = glob([
        "core/include/**/*.h",
        "core/include/**/*.hpp",
        "geniex-app/include/**/*.h",
        "geniex-app/include/**/*.hpp",
        "geniex-app/src/**/*.h",
        "geniex-app/src/**/*.hpp",
        "models/**/*.h",
        "models/**/*.hpp",
        "models_ref/**/*.h",
        "models_ref/**/*.hpp",
        "third-party/nexaproc/include/**/*.h",
        "third-party/nexaproc/include/**/*.hpp",
        "third-party/nexaproc/third_party/xtensor/include/**/*.h",
        "third-party/nexaproc/third_party/xtensor/include/**/*.hpp",
        "third-party/nexaproc/third_party/xtl/include/**/*.h",
        "third-party/nexaproc/third_party/xtl/include/**/*.hpp",
    ], allow_empty = True),
    includes = [
        "core/include",
        "geniex-app/include",
        "geniex-app/include/QNN",
        "geniex-app/include/QNN/HTP",
        "geniex-app/src/qnn-api",
        "geniex-app/src/qnn-api/config",
        "geniex-app/src/MmappedFile/include",
        "models/granite4",
        "models/phi3_5",
        "models/phi4",
        "models/qwen3",
        "third-party/nexaproc/include",
        "third-party/nexaproc/third_party/xtensor/include",
        "third-party/nexaproc/third_party/xtl/include",
    ],
)

cc_import(
    name = "geniex_core",
    interface_library = "geniex_core.lib",
    shared_library = "geniex_core.dll",
)

filegroup(
    name = "runtime_dlls",
    srcs = [
        "geniex_core.dll",
    ],
)
