load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "headers",
    hdrs = glob(["include/*.h"]),
    includes = ["include"],
    deps = ["//sdk/include:headers"],
)

filegroup(
    name = "srcs",
    srcs = glob(["src/*.cpp"]),
)

filegroup(
    name = "runtime_libs",
    srcs = glob(["libs/**"]),
)
