load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "logic",
    srcs = ["cv.go"],
    importpath = "github.com/qcom-it-nexa-ai/geniex/cli/cmd/geniex/logic",
    visibility = ["//visibility:public"],
    deps = [
        "//bindings/go:geniex_sdk_go",
        "@org_golang_x_image//font",
        "@org_golang_x_image//font/basicfont",
        "@org_golang_x_image//math/fixed",
    ],
)
