# gazelle:resolve go resty.dev/v3 @dev_resty_v3//:resty

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "aihub",
    srcs = [
        "aihub.go",
        "schema.go",
        "selector.go",
        "unzip.go",
    ],
    importpath = "github.com/qcom-it-nexa-ai/geniex/cli/internal/model_hub/aihub",
    visibility = ["//cli:__subpackages__"],
    deps = [
        "//cli/internal/config",
        "//cli/internal/types",
        "@com_github_bytedance_sonic//:sonic",
        "@dev_resty_v3//:resty",
    ],
)

go_test(
    name = "aihub_test",
    srcs = [
        "schema_test.go",
        "selector_test.go",
        "unzip_test.go",
    ],
    embed = [":aihub"],
    deps = ["@com_github_bytedance_sonic//:sonic"],
)
