[package]
name = "model-manager-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
fs2 = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
reqwest = { workspace = true }
rustls = { workspace = true }
async-trait = { workspace = true }
url = { workspace = true }
flate2 = { workspace = true }

# On Android, rustls-platform-verifier requires JNI-side init (JavaVM +
# Context) plus a Kotlin companion library before any TLS handshake, or it
# panics with "Expect rustls-platform-verifier to be initialized". The
# Android binding does neither, so fall back to bundled Mozilla webpki-roots
# there. Trade-off: Android system-store CAs (corporate MITM) are not
# trusted on Android.
[target.'cfg(not(target_os = "android"))'.dependencies]
rustls-platform-verifier = { workspace = true }

[target.'cfg(target_os = "android")'.dependencies]
webpki-roots = { workspace = true }

[dev-dependencies]
tempfile = "3"
wiremock = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
zip = { workspace = true }
flate2 = { workspace = true }
